tests/fixtures/invalid/none_pow_str.py
# Cannot power None and Str
x: None = None ** "hello"
